chore(node): update src & build to app & dist

--- a/app/views/layout/_layout.pug
+++ b/app/views/layout/_layout.pug
@@ -6,10 +6,10 @@ head
         title Platformer
 
     block layout-styles
-        link(rel="stylesheet", href="styles/style.css")
+        link(rel="stylesheet", href="/styles/style.css")
 body
     main.l-main
         block layout-main
 
     block layout-scripts
-        script(type="text/javascript" src="scripts/app.js")
+        script(type="text/javascript" src="/scripts/app.js")
