refactor(app/views): replace sprite img

--- a/app/index.pug
+++ b/app/index.pug
@@ -5,4 +5,5 @@ block layout-main
         canvas#js-stage
 
         .h-no-display
-            img(src='/assets/images/sprite.png')
+            img#js-sprite-1x(src='/assets/images/sprite@1x.png')
+            img#js-sprite-2x(src='/assets/images/sprite@2x.png')
