style(app/(styles, views)): add instruction message

--- a/app/index.pug
+++ b/app/index.pug
@@ -4,6 +4,8 @@ block layout-main
     section
         canvas#js-stage
 
+        p.o-message Use your keyboards #[strong arrows] to move and jump, use the #[strong Z key] to shoot.
+
         .h-no-display
             img#js-sprite-1x(src='/assets/images/sprite@1x.png')
             img#js-sprite-2x(src='/assets/images/sprite@2x.png')
